--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+imblearn==0.0
+lightgbm==2.2.3
 matplotlib==3.5.1
 numpy==1.20.3
 pandas==1.3.5
+pickleshare==0.7.5
 seaborn==0.11.2
 shap==0.40.0
 streamlit==1.3.1
